--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@upstash/redis": "^1.31.5",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "prism-react-renderer": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
